添加“wait/notify方法只能在synchronized代码块内被调用”

--- a/Week03/多线程学习笔记.md
+++ b/Week03/多线程学习笔记.md
@@ -43,6 +43,8 @@ NUMA架构可扩展性更好，SMP架构中CPU对同一内存的竞争太强
 
 ### wait&notify
 
+**wait/notify方法只能在synchronized代码块内被调用**
+
 | Object#方法                        | 说明                                                         |
 | ---------------------------------- | ------------------------------------------------------------ |
 | void wait()                        | 释放锁+等待0ms+唤醒后，尝试获取锁                            |
