--- a/Week04/作业题.md
+++ b/Week04/作业题.md
@@ -298,3 +298,174 @@ public class LockConditionMethod {
 
 ```
 
+#### CountDownLatchMethod
+
+```java
+package java0.homework;
+
+
+import java.util.concurrent.CountDownLatch;
+
+public class CountDownLatchMethod {
+    private volatile Integer value = null;
+    CountDownLatch latch;
+
+    public void sum(int num) {
+        value = fibo(num);
+        latch.countDown();
+    }
+
+    private int fibo(int a) {
+        if (a < 2) {
+            return 1;
+        }
+        return fibo(a - 1) + fibo(a - 2);
+    }
+
+    public int getValue() throws InterruptedException {
+        latch.await();
+        return value;
+    }
+
+    public void setLatch(CountDownLatch latch) {
+        this.latch = latch;
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+
+        long start = System.currentTimeMillis();
+        // 在这里创建一个线程或线程池，
+        // 异步执行 下面方法
+
+        final CountDownLatchMethod method = new CountDownLatchMethod();
+        method.setLatch(new CountDownLatch(1));
+        Thread thread = new Thread(() -> {
+            method.sum(45);
+        });
+        thread.start();
+
+        int result = method.getValue(); //这是得到的返回值
+
+        // 确保  拿到result 并输出
+        System.out.println("异步计算结果为：" + result);
+
+        System.out.println("使用时间：" + (System.currentTimeMillis() - start) + " ms");
+
+        // 然后退出main线程
+    }
+}
+
+```
+
+#### CyclicBarrierMethod
+
+```java
+package java0.homework;
+
+import java.util.concurrent.BrokenBarrierException;
+import java.util.concurrent.CyclicBarrier;
+
+public class CyclicBarrierMethod {
+    private volatile Integer value = null;
+    private CyclicBarrier barrier;
+
+    public void sum(int num) throws BrokenBarrierException, InterruptedException {
+        value = fibo(num);
+        barrier.await();
+    }
+
+    private int fibo(int a) {
+        if (a < 2) {
+            return 1;
+        }
+        return fibo(a - 1) + fibo(a - 2);
+    }
+
+    public int getValue() {
+        return value;
+    }
+
+    public void setBarrier(CyclicBarrier barrier) {
+        this.barrier = barrier;
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+
+        long start = System.currentTimeMillis();
+        // 在这里创建一个线程或线程池，
+        // 异步执行 下面方法
+
+        final CyclicBarrierMethod method = new CyclicBarrierMethod();
+        method.setBarrier(new CyclicBarrier(1,()->{
+            int result = method.getValue(); //这是得到的返回值
+
+            // 确保  拿到result 并输出
+            System.out.println("异步计算结果为：" + result);
+
+            System.out.println("使用时间：" + (System.currentTimeMillis() - start) + " ms");
+
+            // 然后退出main线程
+        }));
+        Thread thread = new Thread(() -> {
+            try {
+                method.sum(45);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            } catch (BrokenBarrierException e) {
+                e.printStackTrace();
+            }
+        });
+        thread.start();
+
+
+    }
+}
+```
+
+#### FutureMethod
+
+```java
+package java0.homework;
+
+import java.util.concurrent.*;
+
+public class FutureMethod implements Callable<Integer> {
+
+    public int sum(int num) {
+        return fibo(num);
+    }
+
+    private int fibo(int a) {
+        if (a < 2) {
+            return 1;
+        }
+        return fibo(a - 1) + fibo(a - 2);
+    }
+
+    @Override
+    public Integer call() throws Exception {
+        return sum(45);
+    }
+
+    public static void main(String[] args) throws InterruptedException, ExecutionException {
+
+        long start = System.currentTimeMillis();
+        // 在这里创建一个线程或线程池，
+        // 异步执行 下面方法
+
+        ExecutorService executorService = Executors.newSingleThreadExecutor();
+        Future<Integer> future = executorService.submit(new FutureMethod());
+        int num = future.get();
+        executorService.shutdown();
+
+
+        // 确保  拿到result 并输出
+        System.out.println("异步计算结果为：" + num);
+
+        System.out.println("使用时间：" + (System.currentTimeMillis() - start) + " ms");
+
+        // 然后退出main线程
+    }
+}
+```
+
