更新学习笔记

--- a/Week10/微服务架构六大最佳实践.md
+++ b/Week10/微服务架构六大最佳实践.md
@@ -54,4 +54,10 @@
 3. 容量规划
 4. 报警预警
 5. 运维流程
+   1. 大规模微服务发布、部署上线一定要有一些发布流程、变更的流程标准
 6. 故障处理
+   1. 把所有的故障都收集起来，后面做根因分析
+      1. 天灾（应急机制）、人祸（教育人就行）、大家知识能力储备不足
+   2. 一次宕机，提前告诉用户和不告诉用户，是两个概念
+   3. Devops（开发人员做运维发布）+SRE（运维人员做系统稳定性工作）
+
