--- a/Week12/从队列到消息服务.md
+++ b/Week12/从队列到消息服务.md
@@ -87,14 +87,17 @@
 ### 三代开源消息中间件
 
 1. ActiveMQ (Apache)/RabbitMQ (Pivotal)
-
 2. Kafka(LinkedLn)/RocketMQ(淘宝)
-
    - 采用磁盘WAL写消息
-
 3. Apache Pulsar
 
-   
+## ActiveMQ介绍
 
+Artemis，目前是ActiveMQ的下一代
 
+### 使用场景
+
+1. 所有需要使用消息队列的地方
+2. 订单处理、消息通知、服务降级等等
+3. 特别地，纯Java实现，支持嵌入到应用系统
 
